[package]
name = "ut1-timetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
chrono = "0.4.31"
ics = "0.5.8"
rand = "0.8.5"
futures = "0.3.29"
anyhow = "1.0.75"
hyper = "1.0.0-rc.4"
http = "1.0.0"
